<package>
  <name>handover_urdf</name>
  <version>0.0.1</version>

  <description>This package contains a number of URDF files for handover experiment.</description>
  <author email="asheshvasalya@gmail.com">Ashesh Vasalya!!</author>

  <maintainer email="asheshvasalya@gmail.com">Ashesh Vasalya!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
